@@ -3,73 +3,24 @@ package com.example.demo.service.impl;
 import com.example.demo.model.BundleRule;
 import com.example.demo.repository.BundleRuleRepository;
 import com.example.demo.service.BundleRuleService;
-import jakarta.persistence.EntityNotFoundException;
 import org.springframework.stereotype.Service;
-
-import java.util.List;
 
 @Service
 public class BundleRuleServiceImpl implements BundleRuleService {
-
-    private final BundleRuleRepository repo;
-
-    public BundleRuleServiceImpl(BundleRuleRepository repo) {
-        this.repo = repo;
+    private final BundleRuleRepository bundleRuleRepository;
+    
+    public BundleRuleServiceImpl(BundleRuleRepository bundleRuleRepository) {
+        this.bundleRuleRepository = bundleRuleRepository;
     }
-
+    
     @Override
     public BundleRule createRule(BundleRule rule) {
-        if (!rule.isDiscountPercentageValid()) {
-            throw new IllegalArgumentException("Invalid discount range");
+        if (rule.getDiscountPercentage() < 0 || rule.getDiscountPercentage() > 100) {
+            throw new IllegalArgumentException("Discount percentage must be between 0 and 100");
         }
-        if (rule.getRequiredProductIds() == null || rule.getRequiredProductIds().isBlank()) {
-            throw new IllegalArgumentException("Required products cannot be empty");
+        if (rule.getRequiredProductIds() == null || rule.getRequiredProductIds().trim().isEmpty()) {
+            throw new IllegalArgumentException("Required product IDs cannot be empty");
         }
-        if (rule.getMinQuantity() == null || rule.getMinQuantity() <= 0) {
-            throw new IllegalArgumentException("Min quantity must be positive");
-        }
-        return repo.save(rule);
-    }
-
-    @Override
-    public BundleRule updateRule(Long id, BundleRule rule) {
-        BundleRule existing = repo.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Bundle rule not found"));
-
-        if (!rule.isDiscountPercentageValid()) {
-            throw new IllegalArgumentException("Invalid discount range");
-        }
-
-        existing.setRuleName(rule.getRuleName());
-        existing.setRequiredProductIds(rule.getRequiredProductIds());
-        existing.setDiscountPercentage(rule.getDiscountPercentage());
-        existing.setMinQuantity(rule.getMinQuantity());
-
-        return repo.save(existing);
-    }
-
-    @Override
-    public BundleRule getRuleById(Long id) {
-        return repo.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Bundle rule not found"));
-    }
-
-    
-    public List<BundleRule> getAllRules() {
-        return repo.findAll();
-    }
-
-    // NOT in interface → NO @Override
-    public List<BundleRule> getActiveRules() {
-        return repo.findAll().stream()
-                .filter(BundleRule::getActive)
-                .toList();
-    }
-
-    // NOT in interface → NO @Override
-    public void deactivateRule(Long id) {
-        BundleRule rule = getRuleById(id);
-        rule.setActive(false);
-        repo.save(rule);
+        return bundleRuleRepository.save(rule);
     }
 }
